welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	for (compteur <- 1 to 6){
        ^Program:16: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if  (Biscuit==0){
  ^Program:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (Biscuit !=0)
  ^Program:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  	return true
        ^