welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  while (vuBiscuit != false){
  	return false
    vuBiscuit()}
  if (vuBiscuit == true){
    return true
  }
  }

var Biscuit=0  
def vuBiscuit():Boolean{
	for (compteur <- 1 to 6){
    if (estSurBiscuit()){
      Biscuit = Biscuit+1}
    avance();}
  if  (Biscuit==0){
    droite()
    avance()
    gauche()
    return false}
  if (Biscuit !=0)
  	return true
  }
   
    
  

